# medibot_assistant

./: .gitignore  README.md  pyproject.toml
cli/: augmented_generation_cli.py  describe_image_cli.py  evaluation_cli.py  hybrid_search_cli.py  keyword_search_cli.py  multimodal_search_cli.py  semantic_search_cli.py
cli/lib/: augmented_generation.py  evaluation.py  hybrid_search.py  keyword_search.py  multimodal_search.py  query_enhancement.py  rerank.py  search_utils.py  semantic_search.py  test_gemini.py
data/: doctors.json  golden_dataset.json
